test/tests/compiler/18_structures/invalid_types/extra_credit/other_features/switch_on_struct.plx
#  Can't use structure as controlling expression in switch statement
type struc s(    i: i32    )

pub fn main(none) i32 {
    x: struc s = $(true)
    match x {
        -> 1 {
            return 0
        }
        otherwise {
            return 1
        }
    }
}
